--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <div class="display">display</div>
+        <div class="display"></div>
         <div class="calculator">
             <div style="background-color:#f95959" ,class="backSpace"> <i class="material-icons">&#xe14a;</i></div>
             <div style="background-color: #233142", class="ac">AC</div>
