--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/calculator" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
-        <div class="display"></div>
+        <div class="display">d i s p l a y</div>
         <div class="calculator">
             <div style="background-color:#f95959" ,class="backSpace"> <i class="material-icons">&#xe14a;</i></div>
             <div style="background-color: #233142", class="ac">AC</div>
