--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
     <div class="container">
         <div class="calculator">
             <div class="display">d i s p l a y</div>
-            <div style="background-color:#f95959" ,class="backSpace"> <i class="material-icons">&#xe14a;</i></div>
-            <div style="background-color: #233142", class="ac">AC</div>
-            <div style="background-color: #233142", class="opr%">%</div>
-            <div style="background-color: #233142", class="opr/">/</div>
-            <div style="background-color: #455d7a;", class="num7">7</div>
-            <div style="background-color: #455d7a;", class="num8">8</div>
-            <div style="background-color: #455d7a;", class="num9">9</div>
-            <div style="background-color: #233142",class="opr*">*</div>
-            <div style="background-color: #455d7a;",class="num4">4</div>
-            <div style="background-color: #455d7a;", class="num5">5</div>
-            <div style="background-color: #455d7a;", class="num6">6</div>
-            <div style="background-color: #233142",class="opr-">-</div>
-            <div style="background-color: #455d7a;", class="num1">1</div>
-            <div style="background-color: #455d7a;", class="num2">2</div>
-            <div style="background-color: #455d7a;", class="num3">3</div>
-            <div style="background-color: #233142",class="opr+">+</div>
-            <div style="background-color: #233142", class="posneg">−/+</div>
-            <div style="background-color: #455d7a;", class="num0">0</div>
-            <div style="background-color: #233142", class="dot">.</div>
-            <div style="background-color:#f95959" ,class="equal">=</div>
+            <div style="background-color:#f95959" class="backSpace"> <i class="material-icons">&#xe14a;</i></div>
+            <div style="background-color: #233142" class="ac">AC</div>
+            <div style="background-color: #233142" class="opr%">%</div>
+            <div style="background-color: #233142" class="opr/">/</div>
+            <div style="background-color: #455d7a;" class="num7">7</div>
+            <div style="background-color: #455d7a;" class="num8">8</div>
+            <div style="background-color: #455d7a;" class="num9">9</div>
+            <div style="background-color: #233142"class="opr*">*</div>
+            <div style="background-color: #455d7a;"class="num4">4</div>
+            <div style="background-color: #455d7a;" class="num5">5</div>
+            <div style="background-color: #455d7a;" class="num6">6</div>
+            <div style="background-color: #233142"class="opr-">-</div>
+            <div style="background-color: #455d7a;" class="num1">1</div>
+            <div style="background-color: #455d7a;" class="num2">2</div>
+            <div style="background-color: #455d7a;" class="num3">3</div>
+            <div style="background-color: #233142"class="opr+">+</div>
+            <div style="background-color: #233142" class="posneg">−/+</div>
+            <div style="background-color: #455d7a;" class="num0">0</div>
+            <div style="background-color: #233142" class="dot">.</div>
+            <div style="background-color:#f95959" class="equal">=</div>
 
         </div>
     </div>
